fixed Jarren image

--- a/newIndex.html
+++ b/newIndex.html
@@ -48,7 +48,7 @@
 			                            <td width="150" height="80" style="vertical-align: middle;">
 			                            	<span style="margin-right: 20px; display: block; width: 400px; height: 60px;">
 			                            		<!-- IMAGE CONTENT -->
-			                            		<img src="jarren.png" role="presentation" width="400" class="sc-cHGsZl bHiaRe" style="max-width: 400px;">
+			                            		<img src="Jarren.png" role="presentation" width="400" class="sc-cHGsZl bHiaRe" style="max-width: 400px;">
 			                            	</span>
 			                            </td>
 			                        </tr>
