--- a/newIndex.html
+++ b/newIndex.html
@@ -48,7 +48,7 @@
 			                            <td width="150" height="80" style="vertical-align: middle;">
 			                            	<span style="margin-right: 20px; display: block; width: 400px; height: 60px;">
 			                            		<!-- IMAGE CONTENT -->
-			                            		<img src="Jarren.png" role="presentation" width="400" class="sc-cHGsZl bHiaRe" style="max-width: 400px;">
+			                            		<img src="jarren.png" role="presentation" width="400" class="sc-cHGsZl bHiaRe" style="max-width: 400px;">
 			                            	</span>
 			                            </td>
 			                        </tr>
@@ -269,6 +269,51 @@
 	<br/>
 	<br/>
 	<br/>
+	<!-- ENTRY START -->
+		<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Verdana;">
+		    <tbody>
+		        <tr>
+		            <td>
+		            	<a href="https://saltandcandy.biz" target="_blank" style="color: #9c5c4a; background-color: transparent; text-decoration: none;">
+			                <table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Verdana;">
+			                    <tbody>
+			                        <tr>
+			                            <td width="120" height="120" style="vertical-align: middle;">
+			                            	<span style="margin-right: 20px; display: block; width: 120px; height: 120px;">
+			                            		<img src="gif.gif" role="presentation" width="120" class="sc-cHGsZl bHiaRe" style="max-width: 120px;">
+			                            	</span>
+			                            </td>
+			                            <td width="150" height="80" style="vertical-align: middle;">
+			                            	<span style="margin-right: 20px; display: block; width: 400px; height: 60px;">
+			                            		<!-- IMAGE CONTENT -->
+			                            		<img src="Zama.png" role="presentation" width="400" class="sc-cHGsZl bHiaRe" style="max-width: 400px;">
+			                            	</span>
+			                            </td>
+			                        </tr>
+			                    </tbody>
+			                </table>
+		                </a>
+		            </td>
+		        </tr>
+		        <tr>
+		            <td style="text-align: center; padding-left: 120px;">
+		                <a href="https://www.linkedin.com/company/salt-&-candy/" target="_blank">
+		                	<img src="test.png"> Say HI to us on Linkedin
+		                </a>
+						<a href="https://mailchi.mp/9e5581a60faa/fisforfemale" target="_blank">
+							<img src="mic.png"> </i> F is for Female podcast 
+						</a>  
+						<a href="https://www.facebook.com/pg/saltandcandy/reviews/"  target="_blank">
+							<img src="star.png"> Leave a review 
+						</a>  
+		            </td>
+		        </tr>
+		    </tbody>
+		</table>
+	<!-- ENTRY END -->
+	<br/>
+	<br/>
+	<br/>
 
 	<!-- ENTRY START -->
 		<table cellpadding="0" cellspacing="0" class="sc-gPEVay eQYmiW" style="vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Verdana;">
@@ -311,6 +356,9 @@
 		        </tr>
 		    </tbody>
 		</table>
+			<br/>
+	<br/>
+	<br/>
 	<!-- ENTRY END -->
 
 	</body>
