--- a/Index.html
+++ b/Index.html
@@ -162,5 +162,23 @@ height: 124px;
   
 </div>
 
+<div class="space"></div>
+
+
+<div id=header>
+<img src="gif.gif" id="gif"><a href="https://saltandcandy.biz/11" target="_blank"><img src="Kate.png" style="width: 100%"></a>
+</div>
+
+<div id="links">
+
+<a href="https://www.linkedin.com/company/salt-&-candy/" target="_blank"><img src="test.png"> Say HI to us on Linkedin </a>
+
+<a href="https://mailchi.mp/9e5581a60faa/fisforfemale" target="_blank"><img src="mic.png"></i> F is for Female podcast </a>  
+  
+<a href="https://www.facebook.com/pg/saltandcandy/reviews/"  target="_blank"><img src="star.png"> Leave a review </a>  
+
+  
+</div>
+
 </body>
 </html>
